📶🐐 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!--
 Requirements
-[  ] Two Element Selectors
-[  ] Two ID Selectors
-[Y] Two Class Selectors
-[Y] Three Images
+[Yes] Two Element Selectors
+[Yes] Two ID Selectors
+[Yes] Two Class Selectors
+[Yes] Three Images
 
 Select ONE Additional Feature to Add  
 [ no ] Feature 1 - Include a Background Image
-[ no ] Feature 2 - Include Border Radius CSS Property
+[Yes] Feature 2 - Include Border Radius CSS Property
 [ no ] Feature 3 - Include Horizontal Line
 [ no ] Feature 4 - Embed YouTube Video
 [ no ] Feature 5 - Include Border CSS Property
@@ -19,12 +19,33 @@ Select ONE Additional Feature to Add
         <meta charset="utf-8">
         <title>Dominican Republic</title>
       <style>
-        h1{
-          color: rgb(33, 196, 199)
-        }
-        .summer {
+        .Visitduringthesummer {
           background-color: rgb(255, 78, 78);
             color: rgb(255, 200, 200);
+        }
+        .reasons {
+          background-color: rgb(254, 213, 224);
+            color: rgb(85, 76, 228);
+        }
+         h1{
+      color: blue;
+      text-align: center
+      }
+        h3 {
+          color: blue;
+          text-align: center
+        }
+        #sunny {
+          color: rgb(154,55,18)
+        }
+        #beach {
+          color: rgb(154,55,18)
+        }
+        #food {
+          color: rgb(154,55,18)
+        }
+        img{
+          border-radius: 30px;
         }
       </style>
     </head>
@@ -33,8 +54,26 @@ Select ONE Additional Feature to Add
     Dominican Republic
       </h1>
         <h2>
-         <strong class= "summer">Visit during the summer!</strong>
+         <strong class= "Visitduringthesummer">Visit during the summer!</strong>
       </h2>
+      <h3>
+        or any season you'd like!
+      </h3>
+      <p>
+        <stong class= "reasons">3 Reasons to visit:</stong>
+      </p>
+      <ol>
+        <li id="sunny">
+       The sunny warm weather☀️
+        </li>
+        <li id="beach">
+        Beautiful beaches🏖️
+        </li>
+        <li id="food">
+        Tasty food🍲
+        </li>
+      </ol>
+    
       <img
            src="https://cdn.britannica.com/14/5114-050-E4DD455C/Flag-Dominican-Republic.jpg
               " alt="flag" width="210"
